Changed the text to reflect changes

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Statues of religious leaders!</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use an image either of Guatama Buddha, or Jesus Christ and watch it magically be classified. 
     </p>
     <div class='content'>
       <div class='no-display'>
