Changed the word statues to representations

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Statues of religious leaders!</div>
+    <div class='title'>Classify representations of religious leaders!</div>
     <p>
       Use an image either of Guatama Buddha, or Jesus Christ and watch it magically be classified. 
     </p>
