--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,7 +9,7 @@
   <div class='center'>
     <div class='title'>Classify representations of religious leaders!</div>
     <p>
-      Use an image either of Guatama Buddha, or Jesus Christ and watch it magically be classified. 
+      Use an image either of Gautama Buddha, or Jesus Christ and watch it magically be classified. 
     </p>
     <div class='content'>
       <div class='no-display'>
